# back

./: Cargo.toml  README.md
migrations/2024-02-27-143420_create_users/: up.sql
migrations/2024-02-27-143455_create_friends/: up.sql
src/: auth.rs  db.rs  handlers.rs  lib.rs  main.rs  routes.rs  schema.rs
src/services/: user_service.rs
src/users/: jwt.rs  models.rs
