[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql", "r2d2"] }
r2d2 = "0.8.9"
dotenvy = "0.15"
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
bcrypt = "0.15.1"
jsonwebtoken = "9"
